--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 /* Global */
 
+@custom-media --mq-mobile-only (max-width: 420px);
+
 :root {
   --color-black: #1d1d1b;
   --color-white: #ffffff;
@@ -40,11 +42,10 @@ p {
 .section-headline {
   text-align: left;
   margin: 16px 32px 32px 32px;
-}
-
-.section-headline h1 {
+  h1 {
     margin: 19px 0 6px 0;
   }
+}
 
 .card-headline {
   width: 100%;
@@ -73,14 +74,14 @@ p {
   text-transform: uppercase;
   font-weight: 700;
   border: none;
-}
 
-.btn-primary:hover {
+  &:hover {
     transition: background-color .3s ease-in-out, color .3s ease-in-out;
     background-color: var(--color-purple-light) !important;
     color: var(--color-purple) !important;
     box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.47);
   }
+}
 
 .btn-delete {
   background-color: var(--color-white);
@@ -91,30 +92,26 @@ p {
   overflow: hidden;
   transition: background-color .2s ease-in-out;
   width: 25px;
-}
 
-.btn-delete:hover {
+  &:hover {
     background-color: var(--color-grey-light);
     transition: background-color .2s ease-in-out;
   }
 
-.btn-delete p {
+  p {
     margin: 0;
   }
+}
 
 .App {
   min-height: 100vh;
   text-align: center;
   padding: 0;
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: column;
-          flex-direction: column;
-  -webkit-align-items: center;
-          align-items: center;
-}
+  flex-direction: column;
+  align-items: center;
 
-.App header {
+  header {
     margin-right: -15px ;
     margin-left: -15px;
     width: 100%;
@@ -122,25 +119,25 @@ p {
     height: 80px;
     padding: 20px;
     color: white;
-  }
 
-.App header .header-inner {
+    .header-inner {
       position: relative;
       margin-left: auto;
       margin-right: auto;
       max-width: 1280px;
       text-align: right;
       width: 100%;
-    }
 
-.App header .header-inner img {
+      img {
         position: absolute;
         left: 0;
         top: -20px;
         width: 125px;
       }
+    }
+  }
 
-.App footer {
+  footer {
     background-color: var(--color-black);
     color: var(--color-white);
     font-family: sans-serif;
@@ -153,6 +150,7 @@ p {
     width: 100%;
     z-index: 10;
   }
+}
 
 /* Message section */
 .message-container {
@@ -161,44 +159,40 @@ p {
   margin-top: 80px;
   margin-bottom: 80px;
   padding: 80px 15px;
-}
-.message-container .message-form, .message-container .message-list {
+
+  .message-form, .message-list {
     background-color: var(--color-white);
     margin-bottom: 32px;
     padding: 32px;
     min-height: 460px;
   }
-.message-container .message-form {
-    display: -webkit-flex;
+
+  .message-form {
     display: flex;
-    -webkit-flex-direction: column;
-            flex-direction: column;
-    -webkit-align-items: center;
-            align-items: center;
-  }
-.message-container .message-form form {
-      display: -webkit-flex;
+    flex-direction: column;
+    align-items: center;
+
+    form {
       display: flex;
-      -webkit-flex-direction: column;
-              flex-direction: column;
-      -webkit-align-items: center;
-              align-items: center;
+      flex-direction: column;
+      align-items: center;
       width: 100%;
     }
-.message-container .message-form textarea {
+
+    textarea {
       height: 234px;
       width: 360px;
       padding: 30px;
       border: none;
       box-shadow: 0 2px 10px 0 rgba(0,0,0,.14);
       margin-bottom: 32px;
-    }
-@media (max-width: 420px) {
-.message-container .message-form textarea {
-        width: 100%
-    }
+      @media (--mq-mobile-only) {
+        width: 100%;
       }
-.message-container .message {
+    }
+  }
+
+  .message {
     position: relative;
     min-height: 234px;
     max-width: 360px;
@@ -208,21 +202,22 @@ p {
     text-align: left;
     font-size: 15px;
     border-radius: 8px;
-  }
-.message-container .message:after {
+    &:after {
       content: "";
       position: absolute;
       top: 0;
       left: -5px;
       right: -5px;
-      -webkit-transform: perspective(8px) rotateX(-1deg);
-              transform: perspective(8px) rotateX(-1deg);
+      transform: perspective(8px) rotateX(-1deg);
       background: var(--color-white);
       box-shadow: 2px 6px 29px 1px rgba(0,0,0,.26);
       height: 12px;
     }
-.message-container .message .btn-delete {
+
+    .btn-delete {
       position: absolute;
       bottom: -8px;
       right: -8px;
     }
+  }
+}
