--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,11 @@ p {
     margin: 0;
   }
 
+small {
+  color: red;
+  padding-bottom: 15px;
+}
+
 .App {
   min-height: 100vh;
   text-align: center;
@@ -166,7 +171,7 @@ p {
     background-color: var(--color-white);
     margin-bottom: 32px;
     padding: 32px;
-    min-height: 460px;
+    min-height: 515px;
   }
 .message-container .message-form {
     display: -webkit-flex;
@@ -195,6 +200,24 @@ p {
     }
 @media (max-width: 420px) {
 .message-container .message-form textarea {
+        width: 100%
+    }
+      }
+.message-container .message-form select {
+      border: none;
+      font-size: 12px;
+      height: 29px;
+      padding: 5px;
+      width: 360px;
+      color: #666;
+      border-radius: 0;
+      box-shadow: 0 2px 10px 0 rgba(0,0,0,.14);
+      background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+      overflow: hidden;
+      margin-bottom: 32px;
+    }
+@media (max-width: 420px) {
+.message-container .message-form select {
         width: 100%
     }
       }
