--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -103,6 +103,11 @@ p {
   }
 }
 
+small {
+  color: red;
+  padding-bottom: 15px;
+}
+
 .App {
   min-height: 100vh;
   text-align: center;
@@ -164,7 +169,7 @@ p {
     background-color: var(--color-white);
     margin-bottom: 32px;
     padding: 32px;
-    min-height: 460px;
+    min-height: 515px;
   }
 
   .message-form {
@@ -185,6 +190,23 @@ p {
       padding: 30px;
       border: none;
       box-shadow: 0 2px 10px 0 rgba(0,0,0,.14);
+      margin-bottom: 32px;
+      @media (--mq-mobile-only) {
+        width: 100%;
+      }
+    }
+
+    select {
+      border: none;
+      font-size: 12px;
+      height: 29px;
+      padding: 5px;
+      width: 360px;
+      color: #666;
+      border-radius: 0;
+      box-shadow: 0 2px 10px 0 rgba(0,0,0,.14);
+      background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+      overflow: hidden;
       margin-bottom: 32px;
       @media (--mq-mobile-only) {
         width: 100%;
